// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`puz parseTextFile extracts expected Puzzle object from "v1_text_format.txt" 1`] = `
Object {
  "author": "Created by Avalonian",
  "clues": Array [
    "Destiny",
    "Biting insect",
    "Troubles",
    "Golf equipments",
    "Computer keyboard key",
    "Above water, barely",
    "Oak seed or fruit",
    "Sausage",
    "I smell ____",
    "Squat",
    "Community dances",
    "Deserter",
    "Owned property",
    "House on Pennsylvania Ave.",
    "Seeps",
    "City NE of Manchester",
    "True ____ : Arnold S. movie",
    "Novel or rare item",
    "If the ____ fits, ...",
    "Favorite group of 53 across",
    "Subject of dentistry",
    "EEE with 16 across",
    "Midsummer's Night Dream character",
    "Formerly",
    "Ate sparingly",
    "Wife of Asiris",
    "Monetary unit",
    "Use reference",
    "She entertains guests",
    "\\"____, Johnny!\\"",
    "Make ready for use again",
    "South African currency unit",
    "Canal or Lake",
    "Delaying tactic of 53 across",
    "Yiddish, informally",
    "Spinning ____",
    "Math. subject",
    "Parts of typeset characters",
    "Toll",
    "Clod",
    "One who mimics",
    "Bearers : comb. form",
    "Egyptian river",
    "Bancroft and Archer",
    "Female pilot",
    "Fool",
    "Medics",
    "God in latin",
    "Pizza place fixtures",
    "Homages",
    "Sometimes a dieter is one",
    "Coat part",
    "Physical",
    "Idle",
    "Some kinds of snakes",
    "Type of sandwich",
    "Of posterior muscles",
    "Clean and care for",
    "\\"____ through!\\"",
    "Raises one's spirits",
    "Smallest planet of the Sun",
    "Block",
    "Swing about",
    "Cover",
    "____ slopes",
    "One who works despite a strike",
    "Glacial ridge",
    "Org.",
    "A dog's name",
    "GOP member",
    "Before",
    "Tax break savings account",
    "Of masses",
    "Angry",
    "Strikes violently",
    "Just",
    "Inert gas",
    "Encourage",
  ],
  "copyright": "1995 Literate Software Systems",
  "height": 15,
  "notepad": "This is an example notepad entry with
two lines in it.",
  "solution": "FATE.AWASH.AWOLLIES.CURIO.SHOEELECTORATE.SIZEASS.ERST.DIETED...CENT.HOSTESSREFITS.JEWISH..ARITH.KERNS.OAFNILE.ANNES.DUPEDEI.OVENS.LOSER..BODILY.RACERSGLUTEAL.PEPS...RESIST.SLUE.SKIOTTO.REPUBLICANOMES.IRATE.RAMSMERE.XENON.ABET",
  "title": "Politics: Who, what, where and why",
  "width": 15,
}
`;

exports[`puz parseTextFile extracts expected Puzzle object from "v2_text_format_mark.txt" 1`] = `
Object {
  "author": "Created by Avalonian",
  "clues": Array [
    "Destiny",
    "Biting insect",
    "Troubles",
    "Golf equipments",
    "Computer keyboard key",
    "Above water, barely",
    "Oak seed or fruit",
    "Sausage",
    "I smell ____",
    "Squat",
    "Community dances",
    "Deserter",
    "Owned property",
    "House on Pennsylvania Ave.",
    "Seeps",
    "City NE of Manchester",
    "True ____ : Arnold S. movie",
    "Novel or rare item",
    "If the ____ fits, ...",
    "Favorite group of 53 across",
    "Subject of dentistry",
    "EEE with 16 across",
    "Midsummer's Night Dream character",
    "Formerly",
    "Ate sparingly",
    "Wife of Asiris",
    "Monetary unit",
    "Use reference",
    "She entertains guests",
    "\\"____, Johnny!\\"",
    "Make ready for use again",
    "South African currency unit",
    "Canal or Lake",
    "Delaying tactic of 53 across",
    "Yiddish, informally",
    "Spinning ____",
    "Math. subject",
    "Parts of typeset characters",
    "Toll",
    "Clod",
    "One who mimics",
    "Bearers : comb. form",
    "Egyptian river",
    "Bancroft and Archer",
    "Female pilot",
    "Fool",
    "Medics",
    "God in latin",
    "Pizza place fixtures",
    "Homages",
    "Sometimes a dieter is one",
    "Coat part",
    "Physical",
    "Idle",
    "Some kinds of snakes",
    "Type of sandwich",
    "Of posterior muscles",
    "Clean and care for",
    "\\"____ through!\\"",
    "Raises one's spirits",
    "Smallest planet of the Sun",
    "Block",
    "Swing about",
    "Cover",
    "____ slopes",
    "One who works despite a strike",
    "Glacial ridge",
    "Org.",
    "A dog's name",
    "GOP member",
    "Before",
    "Tax break savings account",
    "Of masses",
    "Angry",
    "Strikes violently",
    "Just",
    "Inert gas",
    "Encourage",
  ],
  "copyright": "1995 Literate Software Systems",
  "height": 15,
  "notepad": "This is an example notepad entry with
two lines in it.",
  "solution": "fATE.AWASH.AWOlLIES.CURIO.SHOEELECTORATE.SIZEASS.ERST.DIETED...CENT.HOSTESSREFITS.JEWISH..ARITH.KERNS.OAFNILE.ANNES.DUPEDEI.OVENS.LOSER..BODILY.RACERSGLUTEAL.PEPS...RESIST.SLUE.SKIOTTO.REPUBLICANOMES.IRATE.RAMSmERE.XENON.ABEt",
  "title": "Politics: Who, what, where and why",
  "width": 15,
}
`;

exports[`puz parseTextFile extracts expected Puzzle object from "v2_text_format_rebus.txt" 1`] = `
Object {
  "author": "Jeremy Newton / Will Shortz",
  "clues": Array [
    "Portraitist of George Washington",
    "Weightlifter's helper",
    "Have a break at 4:00, say",
    "Troop troupe: Abbr.",
    "Basic travel path",
    "First name in gossip",
    "Paris was part of it",
    "Robot maid on \\"The Jetsons\\"",
    "Equips with new clips",
    "Small African antelope",
    "It's darn likely",
    "\\"My, my, old chap!\\"",
    "Dusk, to Donne",
    "Sorority chapter",
    "Unlikely event for puritans",
    "MADD member",
    "Foe of Spider-Man",
    "Like some modern maps",
    "Coffee table item",
    "Leader of a flock",
    "Do away with",
    "Spreader of holiday cheer",
    "Mustang rivals",
    "Gene who sang \\"Back in the Saddle Again\\"",
    "Singer who said \\"At least I had that, one guy understood me\\"",
    "Cause of many uprisings",
    "Possible punishment for steroid use",
    "Enhance",
    "When Cannes heats up",
    "Native tongue of R&B singer Rihanna",
    "Bow to",
    "Wise guy",
    "Members of the bar?",
    "Ear part",
    "\\"Esq.\\" titleholders",
    "Biker's add-on",
    "Keep an eye out for",
    "Early Chinese dynasty",
    "Meager",
    "Admit defeat, in a way",
    "Prefix with sphere",
    "Lucratively",
    "Fuming",
    "Polite disclaimer",
    "ABC a.m. show, briefly",
    "Daring",
    "Last resort in poker, often",
    "Alvin and the Chipmunks, e.g.",
    "Experts at exports",
    "Doesn't waver",
    "Euripides drama",
    "Genre explored by Run-D.M.C. and Aerosmith",
    "G.P.S. suggestion",
    "Diurnally",
    "\\"Hop ___!\\"",
    "Mexican mouse chaser",
    "Bottle opener's surprise",
    "Vegas openings?",
    "Inner circle",
    "Untangles, in a way",
    "Cyberball maker",
    "Pop singer who appeared in the movie \\"Sgt. Pepper's Lonely Hearts Club Band\\"",
    "Proust title character",
    "It's called in a political convention roll call",
    "Undercover device",
    "Job interview topic",
    "Campaigns for",
    "\\"Quite possibly\\"",
    "Surface-___",
    "Singles and jingles",
    "Sioux tribe member",
    "State capital on the Colorado River",
    "Sub with sauerkraut?",
    "White wine from Verona",
    "Economy-size",
    "W., e.g.: Abbr.",
    "Langston Hughes poem",
    "Cry at sea",
    "Professional with many contacts?",
    "Cancún resident, once",
    "Lords and ladies",
    "Farm call",
    "Hall's partner in pop",
    "\\"This is how it's done\\"",
    "Worth mentioning",
    "Pattern for light or sound",
    "Is past?",
    "Soft hat materials",
    "Scrape (out)",
    "Actors Max and Max Jr.",
    "Like some professors",
    "See",
    "___ Taylor, co-host of \\"Make Me a Supermodel\\"",
    "Sask. neighbor",
    "It appears when things go bad",
    "Drinks in frosted glasses",
    "Married",
    "Boils down",
    "Hit Sony product introduced in 1984",
    "Model after",
    "American, Swiss, etc.",
    "Thrill seeker",
    "Design feature of many a viaduct",
    "Lookout, maybe",
    "\\"OMG, that's sooo funny!\\"",
    "Kind of bar",
    "Squared away",
    "First name in cosmetics",
    "\\"If you ask me,\\" online",
    "The \\"A\\" of James A. Garfield",
    "Now, in Nogales",
    "Wages, before overtime",
    "Some exams for joint pain sufferers",
    "Litigant",
    "Symptom of catarrh",
    "Focused (on)",
    "Beer serving in a pub",
    "\\"Yippee!\\"",
    "Brisk pace",
    "Cavs, on a scoreboard",
    "Nativity figure",
    "Jabbers",
    "\\"Was it ___ I saw?\\" (classic palindrome)",
    "U.S. gas chain",
    "Samuel L. Jackson's character in \\"Pulp Fiction\\"",
    "Triple-edged sword",
    "Part of a horse's genealogy",
    "Were present?",
    "It might run in the rain",
    "Cool ___",
    "Filled (with)",
    "Genealogical grp.",
    "Part of a serial",
    "S, on a French compass",
    "Eroded",
    "It's usually said with the eyes closed",
    "Wig",
    "Egg holders",
    "Kind of skill",
    "Farm machine",
  ],
  "copyright": "2008, The New York Times",
  "height": 21,
  "solution": ".STUART.ROSIE...OMEGA.PASTOR.ERASE.CAROLERYOKOONO.LI2AN.AUGMENTETE.BA1.OBEY.S3TY.COBATTS..AWAIT.POOR.ATMOSEEINGRED..GUTSY.TRIOTRA$OMMISSIONS..R4OCK...ADAY..TOIT.GATO...CADRE..SWANN.BENEFITSOTO.AUSTIN.GIANT.ITOOMA#ERBOARD.ANCIENT5ANBRAY.OATES.LIKESO.BIGSINEWAVE.FELTS..BAERS...DATE.NIKI..MOLD...DEC0S..ADRENALINE6KIEIMHO.ABRAM..BONESCANSSUER.HACK.DWELT..TROTCLE.JO9H.ARAT.7ES.AREMASCARA.FR8HT.EPISODEATEAWAY.ACHOO.PERUKE.NESTS...MOTOR.SEEDER.",
  "title": "NY Times, Sun, Sep 14, 2008  YEAR-ROUND",
  "width": 21,
}
`;
